applications/JupyterNotebook/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: notebook
  labels:
    app: notebook
spec:
  ports:
    - port: 8888
      targetPort: webui
      protocol: TCP
  selector:
    app: notebook
  sessionAffinity: None
  type: LoadBalancer
