applications/JupyterNotebook/k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook
  labels:
    app: notebook
spec:
  rules:
  - host: notebook.homelab.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: notebook
            port:
              number: 8888
